Se agrega About

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,7 +32,7 @@
                     <h3 class="home_subtitle">Full Stack Developer</h3>
                     <p class="home_description"> Estoy dando dando mis primeros pasos en programación
                         y en la siguiente web podrán ver mis proyectos.</p>
-                    <a href="#cv" class="button button--flex">
+                    <a download="" href="assets/pdf/Axel.Barbona-cv.pdf" class="button button--flex">
                     Descargar CV  <i class="uil uil-cloud-download button_icon"></i>
                     </a>
                     
