--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,11 +12,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#inicio"> 
+            <a class="nav-link active" aria-current="page" href="#home"> 
                 <i class="uil uil-estate nav_icon"></i> Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#acerca.mi"><i class="uil uil-user-square nav_icon"></i> Acerca de mí
+            <a class="nav-link" href="#about"><i class="uil uil-user-square nav_icon"></i> Acerca de mí
             </a>
           </li>
           <li class="nav-item">
