Se agrega Back y front de login

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,1 @@
-<app-header></app-header>
-<main class="main">
-    <app-home></app-home>
-    <app-about></app-about>
-    <app-education></app-education>
-    <app-experiencia></app-experiencia>
-    <app-skills></app-skills>
-    <app-portfolio></app-portfolio>
-    <app-contacto></app-contacto>
-</main>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
