--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -40,8 +40,14 @@
             </a>
           </li>
           <li class="nav-item"> 
-            <a class="nav-link" href="#login"><app-login></app-login> Login
-            </a>
+            <button type="button" class="btn btn-primary" (click)="login()" *ngIf="!isLogged" data-bs-toggle="modal" data-bs-target="#exampleModal" data-auth-modal-tab="login" >
+              <i class="uil uil-user nav_icon"></i> Ingresar
+            </button>
+          </li>
+          <li class="nav-item"> 
+            <button type="button" class="btn btn-primary" (click)="onLogOut()" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#exampleModal" data-auth-modal-tab="login" >
+              <i class="uil uil-user nav_icon"></i> Cerrar sesión
+            </button>
           </li>
         </ul>
         
