--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -1,59 +1,115 @@
-.modal fade{
+.login-form{
     min-height: 100vh;
-    padding: 50px 15px;
-    display:flex;
+    padding: 60px 15px;
+    display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 a{
     text-decoration: none;
-    font-weight: 500;
     display: inline-block;
+    font-weight: 500;
 }
 
-.modal-content{
-    border-color: var(--first-color-lighter);
-    border: 1px solid var(--first-color-lighter);
-    padding: 40px 50px;
-    border-radius: 15%;
-    backdrop-filter: blur(150px);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.gradient-text{
+    background: linear-gradient(to left, var(--first-color-secondary), var(--first-color-tertiary));
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
 
-.modal-content h5{ 
-    font-size: 25px;
+.login-content{
+    width: 100%;
+    max-width: 450px;
+    position: relative;
+    z-index: 1;
+}
+
+.circle-1,
+.circle-2,
+.circle-3{
+    position: absolute;
+    background: linear-gradient(to right, var(--first-color-secondary), var(--first-color-tertiary));
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.circle-1{
+    height: 100px;
+    width: 100px;
+    left: 2%;
+    top: 2%;
+    transform: traslateX(-50%);
+}
+
+.circle-2{
+    height: 80px;
+    width: 80px;
+    right: 0;
+    bottom: 0;
+    transform: traslateX(20%, 20%);
+}
+
+.circle-3{
+    height: 50px;
+    width: 50px;
+    right: 10%;
+    top: 10%;
+}
+
+
+
+.login-content .login-box{
+    border-color: var(--first-color);
+    border: 2px solid var(--border-color);
+    padding: 40px 50px 50px;
+    border-radius: 20px;
+    backdrop-filter: var(--blur);
+}
+
+.login_title{
+    font-size: 38px;
     text-align: center;
     line-height: 1.2;
     color: var(--first-color);
+    font-weight: 800;
+}
+
+.login_subtitle{
+    font-size: 25px;
+    text-align: center;
+    line-height: 1;
+    color: var(--text-color);
     font-weight: 500;
 }
 
-
-.modal-body .input-box{
-    margin: 15px;
+.form{
+    margin: 25px 0 20px;
 }
 
-.modal-body ::placeholder{
-    color: var(--text-color);
-    opacity: 1;
+.input-box{
+    margin: 25px;
+}
+
+.login-content ::placeholder{
+    color: inherit;
+    opacity: 0.8;
 }
 
 .input-control{
-    display: block;
+    display:block;
     height: 45px;
     width: 100%;
     background-color: transparent;
     border: none;
-    border-bottom: 1.2px solid var(--text-color);
-    color: inherit;
+    border-bottom: 1.5px solid var(--text-color);
+    color:var(--text-color-secondary);
     font-weight: inherit;
     font-family: inherit;
-    font-size: 14px;
+    font-size: 16px;
 }
-
 
 .input-control:focus{
     outline: none;
@@ -64,17 +120,17 @@ a{
     text-align: right;
 }
 
-.modal-footer .btn{
+.btn{
+    margin: 4px;
     height: 45px;
     width: 100%;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     text-transform: capitalize;
     font-family: inherit;
     cursor: pointer;
     border-radius: 25px;
-    user-select:none;
-    background: linear-gradient(to right, var(--first-color-secondary), var(--first-color-alt));
+    user-select: none;
     border: none;
     color: var(--container-color);
     position: relative;
@@ -82,34 +138,48 @@ a{
     overflow: hidden;
 }
 
-.modal-footer .btn::before{
-    content:"";
-    position:absolute;
+.btn::before{
+    content: " ";
+    position: absolute;
     left: 0;
     top: 0;
     height: 100%;
     width: 100%;
-    transition: background-color 0.5s ease;
+    transition: background-color .8s ease-out;
     z-index: -1;
 }
 
-.modal-footer .btn:hover::before{
+.btn:hover::before{
     background-color: var(--first-color-alt);
 }
 
-@media( max-width: 575px){
+.btn-login{
+    background: linear-gradient(to left, var(--first-color-alt), var(--first-color-tertiary));
+}
+
+.btn-volver{
+    background: var(--relleno-color);
+}
+
+.login-content p{
+    text-align: center;
+}
+
+
+@media(max-width: 575px){
     body::after,
     body::before{
-        height: 250px;
+        height: 250px; 
         width: 250px;
         filter: blur(100px);
     }
 
-    .modal-content{
+    .login-box{ 
         padding: 30px;
     }
 
-    .modal-header h5{
+    .login_title,
+    .login_subtitle{
         font-size: 24px;
-    }
+    } 
 }
