--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,37 +1,60 @@
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    <i class="uil uil-user nav_icon"></i>
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog"><!-- form cont-->
-      
-      <div class="modal-content"> <!--box-->
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ingresar</h5>          
-        </div>
-        <div class="modal-body">
-          <form action="">
-            <div class="input-box">
-                <input type="text" placeholder="Usuario" class="input-control">
-            </div>
+<section class="login-form">
+  <div class="login-content">
 
-            <div class="input-box">
-                <input type="password" placeholder="Contraseña" class="input-control">
-                <div class="input-link">
-                    <a href="#" class="gradient-text">¿Has olvidado la contraseña?</a>
-                </div>
-            </div>
+    <div class="circle-1"></div>
+    <div class="circle-2"></div>
+    <div class="circle-3"></div>
 
+    <div class="login-box">
+      <h1 class="login_title">Bienvenido</h1>
+      <h3 class="login_subtitle">Ingresar</h3>
+    
 
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary button">Iniciar Sesión</button>
+    <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+      <div class="input-box">
+        <input
+          type="user"
+          id="nombreUsuario"
+          name="nombreUsuario"
+          placeholder="Usuario"
+          for="nombreUsuario"
+          class="input-control"
+          [(ngModel)]="nombreUsuario"
+          name="nombreUsuario"
+          required />
+      </div>
+
+      <div class="input-box">
+        <input
+          type="password"
+          id="password"
+          for="password"
+          class="input-control"
+          [(ngModel)]="password"
+          placeholder="Contraseña"
+          name="password"
+          required />
+
+        <div class="input-link">
+          <a href="#" class="gradient-text">¿Has olvidado la contraseña?</a>
         </div>
       </div>
+
+      
+        <button
+          type="button"
+          (click)="volver()"
+          class="btn btn-volver">
+          Volver
+        </button>
+
+        <button type="submit" class="btn btn-login">
+          Iniciar Sesión
+        </button>
+      
+    </form>
+
+    <p>¿No tienes cuenta?<a href="#" class="gradient-text"> Crear cuenta</a></p>
     </div>
   </div>
-
+</section>
