--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -11,13 +11,16 @@
   /* HSL color mode */
   --first-color: hsl(var(--hue-color), 69%, 61%); 
   --first-color-secondary: hsl(var(--hue-color), 69%, 61%);
+  --first-color-tertiary: hsl(var(--hue-color), 50%, 40%);
   --first-color-alt: hsl(var(--hue-color), 57%, 53%);
   --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
   --title-color: hsl(var(--hue-color),8%, 15%);
   --text-color: hsl(var(--hue-color),8%,45%);
+  --text-color-secondary: hsl(var(--hue-color),12%,8%);
   --text-color-light: hsl(var(--hue-color),8%,65%);
   --input-color: hsl(var(--hue-color), 70%, 96%); 
   --body-color: hsl(var(--hue-color), 60%, 99%);
+  --relleno-color: hsl(var(--hue-color), 7%, 40%);
   --container-color: #fff;
 
 /*========== Font and typography ==========*/
@@ -52,10 +55,13 @@
 --z-fixed: 100;
 --z-modal: 1000;
 
+--blur: blur(10px);
+
 }
 
+
 /* Font size for large devices */
-@media screen and(min-width: 968px){
+@media screen and(min-width: 820px){
     :root {
         --big-font-size: 3rem;
         --h1-font-size: 2.25rem;
