Se agregan back de Educacion

--- a/frontend/src/app/components/about/about.component.css
+++ b/frontend/src/app/components/about/about.component.css
@@ -36,3 +36,32 @@
     display:flex;
     justify-content: center;
 }
+
+@media  screen and (min-width: 568px){
+    .about_container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 780px) {
+    .about_container{
+        column-gap: 5rem;
+    }
+
+    .about_img{
+        width: 350px;
+    }
+
+    .about_description{
+        text-align: initial;
+    }
+
+    .about_info{
+        justify-content: space-between;
+    }
+
+    .about_buttons{
+        justify-content: initial;
+    }
+    
+}
