--- a/frontend/src/app/components/experiencia/experiencia.component.css
+++ b/frontend/src/app/components/experiencia/experiencia.component.css
@@ -1,76 +1,85 @@
-.exp_container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap:2rem;
-    padding-bottom: 3rem;
+.exp_container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding-bottom: 3rem;
 }
 
-.experiencia-item{
-    position: relative;
-    padding-left: 3rem;
-    border-left: 1px solid var(--first-color-lighter);
+.experiencia-item {
+  position: relative;
+  padding-left: 3rem;
+  border-left: 1px solid var(--first-color-lighter);
+  margin-left: 1rem;
 }
 
-.exp-icon{
-    position:absolute;
-    left: -27px;
-    top: 0;
-    background-color: var(--first-color-lighter);
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.exp-icon {
+  position: absolute;
+  left: -27px;
+  top: 0;
+  background-color: var(--first-color-lighter);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.exp-icon i{
-    font-size: 1.3rem;
+.exp-icon i {
+  font-size: 1.3rem;
 }
 
-.exp-duracion{
-    padding: 0.2rem 0.6rem;
-    border-radius: 15px;
-    display: inline-block;
-    font-size: 0.8rem;
-    text-transform: uppercase;
-    font-weight: 500;
+.exp-duracion {
+  padding: 0.2rem 0.6rem;
+  border-radius: 15px;
+  display: inline-block;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
-.exp-title{
-    padding: 1rem 0;
-    text-transform: uppercase;
-    font-size: 1.3rem;
-    font-weight: 600;
+.exp-title {
+  padding: 1rem 0;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  font-weight: 600;
 }
 
-span{
-    color: var(--text-color);
-    font-weight: 500;
-    font-size: 1.2rem;
+span {
+  color: var(--text-color);
+  font-weight: 500;
+  font-size: 1.2rem;
 }
 
-p{
-    color: var(--text-color);
+p {
+  color: var(--text-color);
 }
 
-
-
-/*
-
-.experiencia_icon{
-    font: size 1.8rem;
-    margin-right: var(--mb-0-25);
+.newexp-btn{
+  margin: 4px;
+  height: 45px;
+  width: 18%;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: capitalize;
+  font-family: inherit;
+  cursor: pointer;
+  border-radius: 25px;
+  user-select: none;
+  border: none;
+  color: var(--container-color);
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  background: linear-gradient(to left, var(--first-color-alt), var(--first-color-tertiary));
 }
 
-.experiencia_data{
-    display: grid;
-    column-gap: 2.5rem;
+.nav-icon{
+  color:var(--first-color-secondary);
 }
 
-.experiencia_title{
-    font-size: var(--normal-font-size);
-    
+@media screen and (max-width: 350px) {
+  .experiencia-item {
+    margin-left: .5rem;
+  }
 }
-
-*/
