--- a/frontend/src/app/components/inicio/inicio.component.html
+++ b/frontend/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header class="header"></app-header>
 <main class="main">
     <app-home></app-home>
     <app-about></app-about>
@@ -8,4 +8,4 @@
     <app-portfolio></app-portfolio>
     <app-contacto></app-contacto>
 </main>
-<app-footer></app-footer>
+<app-footer class="footer"></app-footer>
