--- a/frontend/src/app/components/portfolio/portfolio.component.css
+++ b/frontend/src/app/components/portfolio/portfolio.component.css
@@ -32,3 +32,34 @@
     transform: translateX(0.25rem);
 }
 
+@media screen and (max-width: 350px){
+    .portfolios{
+        width: 380px;
+    }
+}
+
+@media  screen and (min-width: 568px){
+    .portfolio_content{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 780px){
+    #portfolio_img{
+        width: 400px;
+    }
+
+    .portfolio_content{
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .portfolio_content{
+        column-gap: 5rem;
+    }
+
+    .portfolios{
+        width: 1000px;
+    }
+}
