--- a/frontend/src/app/components/contacto/contacto.component.css
+++ b/frontend/src/app/components/contacto/contacto.component.css
@@ -44,3 +44,19 @@
     outline: none;
     padding: .25rem .5rem .5rem 0;
 }
+
+@media  screen and (min-width: 568px){
+    .contact_container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .contact_form{
+        width: 460 px;
+    }
+
+    .contact_inputs{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
