--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="footer_container container grid">
             <div>
                 <h1 class="footer_title">Axel Barbona</h1>
-                <span class="footer_subtitle">Frontend developer</span>
+                <span class="footer_subtitle">Full Stack developer</span>
             </div>
 
             <ul class="footer_links">
