--- a/frontend/src/app/components/about/about.component.css
+++ b/frontend/src/app/components/about/about.component.css
@@ -1,6 +1,6 @@
 .about_img{
-    width:200px;
-    border-radius: .5rem;
+    width:250px;
+    border-radius: 2rem;
     justify-self: center;
     align-self: center;
 }
