--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -3,14 +3,13 @@
     <span class="section_subtitle">Mi introducción</span>
 
     <div class="about_container container grid">
-        <img src="assets/image/logo.ap.png" alt="" class="about_img">
+        <img src="assets/image/about.jpg" alt="" class="about_img">
 
         <div class="about_data">
             <p class="about_description">
                 Soy estudiante de Licenciatura en Administración en la Universidad Nacional del Sur y 
-                Desarrollador Full Stack Jr. gracias al curso de Argentina Programa 
-                dictado por el Ministerio de Desarrollo Productivo y el INTI. Por otra
-                 parte, realice curso de Testing QA y Data Analytics en Coderhouse. 
+                Desarrollador Full Stack Jr. Actualmente me encuentro trabajando en Codimat, realizando tareas de gestión de stock, almacen y deposito.
+                 Por otra parte, realice cursos de Testing QA y Data Analytics en Coderhouse, EdX, Linkedin y Udemy. 
             </p>
 
             <div class="about_info">
