--- a/frontend/src/app/components/inicio/inicio.component.html
+++ b/frontend/src/app/components/inicio/inicio.component.html
@@ -5,7 +5,7 @@
     <app-education></app-education>
     <app-experiencia></app-experiencia>
     <app-skills></app-skills>
-    <app-portfolio></app-portfolio>
+    <app-portfolios></app-portfolios>
     <app-contacto></app-contacto>
 </main>
 <app-footer class="footer"></app-footer>
