--- a/frontend/src/app/components/education/education.component.html
+++ b/frontend/src/app/components/education/education.component.html
@@ -16,7 +16,13 @@
                 <div *ngFor="let Educacion of educacion" class="education_content">
                     <!--================== QUALIFICATION 1 ===============-->
                     <div  class="education_data"> 
+
+                        <div>
+                            <span class="education_rounder"></span>
+                            <span class="education_line"></span>
+                        </div>
                         <div class="educacion_item">
+                            
                             <h3 class="education_title"> {{Educacion.nombreE}}</h3>
                             <span class="education_subtitle"> {{Educacion.descripcionE}}</span>
                             <div class="education_calendar">
@@ -24,17 +30,12 @@
                                  {{Educacion.fechaEI | date}} - {{Educacion.fechaEF | date}}
                             </div>
                             
-                            <button class="btn btn-edit" *ngIf="isLogged" routerLink="/editexp/{{Educacion.id}}"><i class="uil uil-edit nav-icon"></i> Editar</button>
+                            <button class="btn btn-edit" *ngIf="isLogged" routerLink="/editedu/{{Educacion.id}}"><i class="uil uil-edit nav-icon"></i> Editar</button>
         
                             <button class="btn btn-edit" *ngIf="isLogged" (click)="delete(Educacion.id)"><i class="uil uil-multiply nav-icon"></i> Borrar</button>
                         </div>
-                        <div>
-                            <span class="education_rounder"></span>
-                            <span class="education_line"></span>
-                        </div>
-                        <div>
-                            <img src="\assets\image\codimat.png">
-                        </div>  
+                        
+                        
    
                     </div>
    
