--- a/frontend/src/app/components/experiencia/new-experiencia.component.html
+++ b/frontend/src/app/components/experiencia/new-experiencia.component.html
@@ -25,6 +25,16 @@
             <label for="descripcionE"> Descripción de la tarea</label>
             <textarea type="text" class="input-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required></textarea>
         </div>
+
+        <div class="input-box">
+          <label for="fechaEI"> Fecha de inicio</label>
+          <input type="date" value="AAAA-MM" class="input-control" id="fechaEI" name="fechaEI" [(ngModel)]="fechaEI" required>
+        </div>
+
+        <div class="input-box">
+          <label for="fechaEF"> Fecha de fin</label>
+          <input type="date" value="AAAA-MM" class="input-control" id="fechaEF" name="fechaEF" [(ngModel)]="fechaEF" required>
+        </div>
   
         
           <button
